--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shape-tracker",
+  "name": "rpg",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,15 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ftolentino/shape-tracker.git"
+    "url": "git+https://github.com/ftolentino/rpg"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ftolentino/shape-tracker/issues"
+    "url": "https://github.com/ftolentino/rpg/issues"
   },
-  "homepage": "https://github.com/ftolentino/shape-tracker#readme",
+  "homepage": "https://github.com/ftolentino/rpg#readme",
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
